correcting some problems after big imports. Changed the import section to take only 50 items for 10 seconds, so neither the API or chrome causes an problem. Still need to understand why some of the mapping are not working (why does the LigaPokemon have cards that the API does not recognize?), also need to catch those items and request them separately.

--- a/src/app/public/overall-status/overall-status.component.scss
+++ b/src/app/public/overall-status/overall-status.component.scss
@@ -22,6 +22,10 @@ label {
   padding: 1%;
 }
 
+.container-fieldset {
+  overflow: scroll;
+}
+
 :host ::ng-deep {
   .p-datatable-responsive-type .p-datatable-tbody > tr > td .p-column-title {
     display: none;
